--- a/src/app/components/ADMIN/category-places/category-places.component.html
+++ b/src/app/components/ADMIN/category-places/category-places.component.html
@@ -2,19 +2,22 @@
   <app-navbar></app-navbar>
 
   <div *ngIf="token && identity.role === 'ADMIN'" class="text-center mt-2 mb-2">
-    <button class="btn btn-outline-success m-4" data-bs-toggle="modal" data-bs-target="#addCategory">
+    <button class="btn btn-warning m-4" data-bs-toggle="modal" data-bs-target="#addCategory">
       <span class="icon">
-        <i class="fa fa-building" aria-hidden="true"></i>
+        <i class="fa fa-globe" aria-hidden="true"></i>
       </span>
-      <span class="text">ADD CATEGORY</span>
+      <span class="text">Agregar categoría de lugares</span>
     </button>
   </div>
   <hr *ngIf="token && identity.role === 'ADMIN'">
-
+  <br>
 
   <h1>¿A dónde quieres ir?</h1>
   <div class="wrapper" *ngIf="categorys">
     <div class="card" *ngFor="let category of categorys">
+      <br>
+      <img src="../../../../assets//LOGOTIPO ADVENTURE TOUR GT (2).png" class="card-img-top" alt="...">
+      <hr>
       <br>
       <h3 class="card-title">{{category.name}}</h3>
       <h6 class="card-subtitle mb-2 text-muted">Descripción: {{category.description}}</h6>
