--- a/src/app/components/ADMIN/users/users.component.html
+++ b/src/app/components/ADMIN/users/users.component.html
@@ -1,1 +1,131 @@
-<p>users works!</p>
+<body>
+<app-navbar></app-navbar>
+<br>
+    <div class="text-center mt-2 mb-2">
+        <button class="btn btn-success btn-icon-split" data-bs-toggle="modal" data-bs-target="#addUser">
+          <span class="icon">
+            <i class="fa fa-building" aria-hidden="true"></i>
+          </span>
+          <span class="text">Agregar usuarios</span>
+        </button>
+      </div>
+      <hr>
+    
+    <div class="wrapper" *ngIf="users">
+    <div class="card" *ngFor="let user of users">
+        <img  class="card-img-top" src="" alt="user image">
+        <br>
+        <h3 class="card-title">{{user.name}}</h3>
+        <h6 class="card-subtitle mb-2 text-muted">{{user.username}}</h6>
+        <h6 class="card-subtitle mb-2 text-muted">{{user.email}}</h6>
+        <h6 class="card-subtitle mb-2 text-muted">{{user.role}}</h6>
+        <div *ngIf="user.role === 'CLIENT'|| user.role === 'ADMIN-HOTEL'"   class="text-center  ms-3">
+            <button (click)="deleteUser(user._id)" class="btn btn-outline-danger btn-icon-split">Eliminar</button>
+            <button class="btn btn-outline-success btn-icon-split m-2"  (click)="getUser(user._id)"  data-bs-toggle="modal"
+            data-bs-target="#updateUser"  aria-controls="offcanvasExample">Actalizar</button>
+        </div>
+        </div>
+    </div>
+    
+    <!--MODAL ADD User-->
+    <div class="modal fade" id="addUser" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel"><i class="fa fa-building" aria-hidden="true"></i>
+              &nbsp; Agregar usuario:</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form #addUserForm="ngForm">
+              <div class="mb-3">
+                <label for="nameTeam" class="form-label">Name</label>
+                <input [(ngModel)]="user.name" name="name" type="text" class="form-control" id="nameTeam"
+                  aria-describedby="emailHelp">
+              </div>
+              <div class="mb-3">
+                <label for="countryTeam" class="form-label">Username</label>
+                <input [(ngModel)]="user.username" name="username" type="text" class="form-control" id="countryTeam">
+              </div>
+              <div class="mb-3">
+                <label for="descriptionTeam" class="form-label">Password</label>
+                <input [(ngModel)]="user.password" name="password" type="password" class="form-control"
+                  id="descriptionTeam">
+              </div>
+             
+              <div class="mb-3">
+                <label for="descriptionTeam" class="form-label">Email</label>
+                <input [(ngModel)]="user.email" name="email" type="text" class="form-control" id="descriptionTeam">
+              </div>
+              <div class="mb-3">
+                <label for="descriptionTeam" class="form-label">Phone</label>
+                <input [(ngModel)]="user.phone" name="phone" type="number" class="form-control" id="descriptionTeam">
+              </div>
+              <label class="form-label">Role</label>
+                            <select [(ngModel)]="user.role" name="role" class="form-select">
+                                <option value="ADMIN">ADMIN</option>
+                                <option value="CLIENT">CLIENT</option>
+                            </select>
+            </form>
+          </div>
+          <div class=" modal-footer justify-content-center">
+            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
+              <i class="fa fa-times-circle" aria-hidden="true"></i> Descartar</button>
+            <button (click)="saveUser(addUserForm)" type="submit" class="btn btn-success"
+              data-bs-dismiss="modal"><i class="fa fa-floppy-o" aria-hidden="true"></i> Guardar usuario
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- MODAL UPDATE USER -->
+    <div class="modal fade" id="updateUser" tabindex="-1" aria-labelledby="updateUser" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel"><i class="fa fa-pencil" aria-hidden="true"></i>
+              Actualizar usuario:</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form (ngSubmit)="updateUser()" *ngIf="userUpdated">
+              <div class="mb-3">
+                <label for="nameUpdate" class="form-label">Name</label>
+                <input [(ngModel)]="userUpdated.name" name="name" type="text" class="form-control" id="nameUpdate"
+                  aria-describedby="emailHelp">
+              </div>
+              <div class="mb-3">
+                <label for="surnameUpdate" class="form-label">Username</label>
+                <input [(ngModel)]="userUpdated.username" name="username" type="text" class="form-control"
+                  id="surnameUpdate">
+              </div>
+              <div class="mb-3">
+                <label for="usernameUpdate" class="form-label">Email</label>
+                <input [(ngModel)]="userUpdated.email" name="email" type="text" class="form-control"
+                  id="usernameUpdate">
+              </div>
+              <div class="mb-3">
+                <label for="usernameUpdate" class="form-label">Phone</label>
+                <input [(ngModel)]="userUpdated.phone" name="phone" type="number" class="form-control"
+                  id="usernameUpdate">
+              </div>
+              
+              <label class="form-label">Role</label>
+                            <select [(ngModel)]="userUpdated.role" name="role" class="form-select">
+                                <option value="ADMIN-HOTEL">ADMIN-HOTEL</option>
+                                <option value="CLIENT">CLIENT</option>
+                            </select>
+              <div class=" modal-footer justify-content-center">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
+                  <i class="fa fa-times-circle" aria-hidden="true"></i> Descartar</button>
+                <button type="submit" class="btn btn-success" data-bs-dismiss="modal"><i class="fa fa-floppy-o"
+                    aria-hidden="true"></i> Actualizar
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+</body>
