--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-    <a class="navbar-brand" >Adventure Tour Gt</a>
+      <a class="navbar-brand"  routerLink="/home">
+        <img src="../../../assets/Adventure.png" alt="" width="180" height="35">
+      </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,6 +23,9 @@
         <li *ngIf="token && identity.role === 'ADMIN' "  class="nav-item">
           <a class="nav-link" routerLink="/services" >Servicios</a>
         </li>
+        <li *ngIf="token && identity.role === 'ADMIN' "  class="nav-item">
+          <a class="nav-link" routerLink="/users" >Usuarios</a>
+        </li>
         <li *ngIf="token" class="nav-item">
           <a class="nav-link disabled" >
               <i class="fa fa-user-o">
@@ -28,11 +33,11 @@
               {{name}}
           </a>
       </li>
+   
 
-      <li *ngIf="token" class="nav-item dropdown">
+      <li *ngIf="token" class="nav-item dropdown " >
         <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-         Mas acciones
-        </a>
+          <i class="fa fa-bars" aria-hidden="true"></i>        </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li>
                     <a (click)="logOut()" class="dropdown-item" routerLink="/login">Log Out</a>
