--- a/src/app/components/tour/tour.component.html
+++ b/src/app/components/tour/tour.component.html
@@ -1,8 +1,9 @@
-<app-navbar></app-navbar>
+<body>
+    <app-navbar></app-navbar>
 
 <!--BOTONES DE ACCESO RÁPIDO-->
 <div *ngIf="token && identity.role === 'ADMIN' " class="text-center mt-2 mb-2">
-    <button class="btn btn-outline-success m-4" data-bs-toggle="modal" data-bs-target="#addTour">
+    <button class="btn btn-outline-warning m-4" data-bs-toggle="modal" data-bs-target="#addTour">
         <span class="icon">
             <i class="fa fa-building" aria-hidden="true"></i>
         </span>
@@ -208,3 +209,5 @@
 
 
 
+
+</body>
